force-app/main/default/objects/Quote_Line__c/Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Linea de Cotización</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineas de Cotización</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>