force-app/main/default/objects/Quote_Line__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marca</label>
    <type>Checkbox</type>
</CustomField>