force-app/main/default/objects/Quote_Line__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dimensiones</label>
    <type>Checkbox</type>
</CustomField>