force-app/main/default/objects/Quote_Line__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Familia</label>
    <type>Checkbox</type>
</CustomField>