force-app/main/default/objects/Quote_Line__c/fields/Old_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Código Anterior</label>
    <type>Checkbox</type>
</CustomField>