force-app/main/default/objects/Quote_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Lineas de Cotización</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>