force-app/main/default/objects/Quote_Line__c/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precio de Producto</label>
    <referenceTo>Product_Price__c</referenceTo>
    <relationshipLabel>Lineas de Cotización</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>