force-app/main/default/objects/Quote_Line__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Cotización</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Lineas de Cotización</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>