force-app/main/default/objects/Quote_Line__c/fields/Subfamily__c.field-meta.xml
<CustomField>
    <fullName>Subfamily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subfamilia</label>
    <type>Checkbox</type>
</CustomField>