force-app/main/default/objects/Quote_Line__c/fields/Subtotal_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_GTQ__c</fullName>
    <label>Importe GTQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>