force-app/main/default/objects/Quote_Line__c/fields/Subtotal_USD__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_USD__c</fullName>
    <label>Importe USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>