force-app/main/default/objects/Quote_Line__c/fields/Time_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiempo en días</label>
    <type>Checkbox</type>
</CustomField>