force-app/main/default/objects/Quote_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unidad</label>
    <type>Checkbox</type>
</CustomField>